--- a/app/src/main/res/layout/fragment_artist_list.xml
+++ b/app/src/main/res/layout/fragment_artist_list.xml
@@ -147,6 +147,19 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/library_edit_artist_list_to_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible">
+
+    </FrameLayout>
+
+
+    <FrameLayout
         android:id="@+id/library_artist_searchToDetail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
