--- a/app/src/main/res/layout/activity_audio_payment.xml
+++ b/app/src/main/res/layout/activity_audio_payment.xml
@@ -44,6 +44,21 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
+                    <FrameLayout
+                        android:id="@+id/webview_framelayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:clickable="true"
+                        android:visibility="visible"
+                        android:focusable="true">
+
+                    </FrameLayout>
+
+
                     <com.wang.avi.AVLoadingIndicatorView
                         android:id="@+id/aviProgress"
                         android:visibility="visible"
