--- a/app/src/main/res/layout/browse_genre_tile_item.xml
+++ b/app/src/main/res/layout/browse_genre_tile_item.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content">
 
 
-            <com.joooonho.SelectableRoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.joooonho.SelectableRoundedImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageGenres"
                 android:layout_width="@dimen/_90sdp"
                 android:layout_height="@dimen/_90sdp"
