--- a/app/src/main/res/layout/activity_service_home.xml
+++ b/app/src/main/res/layout/activity_service_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:bind="http://schemas.android.com/apk/res/android" >
-
+<layout xmlns:bind="http://schemas.android.com/apk/res/android">
     <androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,24 +15,12 @@
             android:orientation="vertical">
 
             <include
-                android:id="@+id/includedToolbar"
-                layout="@layout/layout_video_toolbar"
+                android:id="@+id/includedComponents"
+                layout="@layout/activity_service_components"
                 android:elevation="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <include
-                android:id="@+id/includedToggle"
-                layout="@layout/layout_video_audio_toggle"
-                android:elevation="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <include
-                android:id="@+id/include_video_dashboard"
-                layout="@layout/layout_video_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
 
         </LinearLayout>
 
@@ -235,24 +222,24 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!--<include-->
-                <!--android:id="@+id/include_video_dashboard_navigation_menu"-->
-                <!--layout="@layout/layout_navigation_header_video"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent" />-->
+            <!--android:id="@+id/include_video_dashboard_navigation_menu"-->
+            <!--layout="@layout/layout_navigation_header_video"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
 
         </com.google.android.material.navigation.NavigationView>
 
         <!--<android.support.design.widget.NavigationView-->
-            <!--app:headerLayout="@layout/layout_navigation_header_video"-->
-            <!--android:id="@+id/navigationView"-->
-            <!--android:layout_width="@dimen/_200sdp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_gravity="start"-->
-            <!--android:theme="@style/NavigationView"-->
-            <!--app:itemTextColor="@color/colorWhite"-->
-            <!--app:itemIconTint="@color/navigationMenuIconColor"-->
-            <!--android:background="@color/backgroundColor"-->
-            <!--app:menu="@menu/video_drawer_view" />-->
+        <!--app:headerLayout="@layout/layout_navigation_header_video"-->
+        <!--android:id="@+id/navigationView"-->
+        <!--android:layout_width="@dimen/_200sdp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:theme="@style/NavigationView"-->
+        <!--app:itemTextColor="@color/colorWhite"-->
+        <!--app:itemIconTint="@color/navigationMenuIconColor"-->
+        <!--android:background="@color/backgroundColor"-->
+        <!--app:menu="@menu/video_drawer_view" />-->
 
 
 
@@ -261,7 +248,3 @@
 
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
-
-
-
-
