--- a/app/src/main/res/layout/fragment_home_video.xml
+++ b/app/src/main/res/layout/fragment_home_video.xml
@@ -119,6 +119,20 @@
     </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chat_channels_recyclerview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:scrollbars="none"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/overlay_layout"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleview_channels_programs"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -129,7 +143,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/overlay_layout"
+            app:layout_constraintTop_toBottomOf="@+id/chat_channels_recyclerview"
             app:layout_constraintVertical_bias="0.0" />
 
         <com.wang.avi.AVLoadingIndicatorView
