--- a/app/src/main/res/layout/layout_chat_toolbar.xml
+++ b/app/src/main/res/layout/layout_chat_toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
@@ -7,29 +8,25 @@
         android:id="@+id/toolbar"
         android:background="@color/backgroundColor"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        android:paddingTop="@dimen/_10sdp">
 
-
-        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
-            android:id="@+id/title_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/notification_imageview"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/payments"
-            android:textColor="@color/videoTitleHeaderColor"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
-            android:textSize="@dimen/_16sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            app:srcCompat="@drawable/ic_chat_home" />
+
 
 
         <ImageView
-            android:id="@+id/back_imageview"
+            android:id="@+id/navigation_imageview"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_marginBottom="8dp"
@@ -39,7 +36,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_video_home_selected" />
+            app:srcCompat="@drawable/ic_navigation_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
