--- a/app/src/main/res/layout/activity_chat_info.xml
+++ b/app/src/main/res/layout/activity_chat_info.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/drawerLayout"
+        android:id="@+id/infoLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/customBlack1">
@@ -15,68 +15,45 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
             <include
-                android:id="@+id/includedChatSub"
-                layout="@layout/layout_chat_sub_bar"
+                android:id="@+id/includedToggle"
+                layout="@layout/chat_info_sub_bar"
                 android:elevation="4dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/listViewMessages"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/relSendMessage"
-                    android:layout_alignParentTop="true"
-                    android:divider="@null"
-                    android:dividerHeight="0dp"
-                    android:padding="0dp"
-                    android:transcriptMode="alwaysScroll"
-                    tools:listitem="@layout/messages_item_left"/>
-
-
                 <LinearLayout
-                    android:id="@+id/relSendMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/customBlack1"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_2sdp">
+                    android:orientation="vertical"
+                    android:id="@+id/online_layout"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="@dimen/_5sdp">
 
-
-                    <EditText
-                        android:id="@+id/editTextMessage"
-                        android:layout_width="0dip"
+                    <TextView
+                        android:id="@+id/memberCount"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="2dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_weight=".85"
-                        android:background="@drawable/service_ome_rounded"
-                        android:hint="Say Something!"
-                        android:maxHeight="100dp"
-                        android:maxLength="200"
-                        android:minHeight="40dp"
-                        android:padding="7dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp"
-                        android:imeOptions="actionSend"/>
+                        android:text="Online Artist"
+                        android:drawableEnd="@drawable/ic_online"
+                        android:drawablePadding="@dimen/_2sdp"
+                        android:textColor="@color/md_white_1000"
+                        android:textStyle="bold"
+                        android:layout_marginStart="@dimen/_10sdp"/>
 
-                    <ImageView
-                        android:id="@+id/buttonSend"
-                        android:layout_width="0dp"
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/online_artist_recycleview"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight=".15"
-                        android:src="@drawable/ic_chat_send_button"
-                        android:gravity="center" />
+                        android:divider="@null"
+                        android:dividerHeight="0dp"
+                        android:padding="0dp"
+                        android:stackFromBottom="true"
+                        android:transcriptMode="alwaysScroll"
+                        android:layout_marginStart="@dimen/_10sdp"/>
                 </LinearLayout>
-            </RelativeLayout>
 
         </LinearLayout>
 
