--- a/app/src/main/res/layout/fragment_main_chat.xml
+++ b/app/src/main/res/layout/fragment_main_chat.xml
@@ -15,7 +15,7 @@
         android:padding="0dp"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll"
-        tools:listitem="@layout/messages_list"/>
+        tools:listitem="@layout/messages_item_left"/>
 
 
     <LinearLayout
