--- a/app/src/main/res/layout/layout_chat_sub_bar.xml
+++ b/app/src/main/res/layout/layout_chat_sub_bar.xml
@@ -1,71 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
+        android:id="@+id/infoInboxToolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_chat_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/back_imageview"
+                android:layout_width="@dimen/_18sdp"
+                android:layout_height="@dimen/_18sdp"
+                android:layout_marginStart="@dimen/_6sdp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:srcCompat="@drawable/ic_back" />
+
+
+            <com.joooonho.SelectableRoundedImageView
+                android:id="@+id/inbox_imageview"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/ic_havana"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/back_imageview"
+                app:layout_constraintTop_toTopOf="parent"
+                app:sriv_left_bottom_corner_radius="25dip"
+                app:sriv_left_top_corner_radius="25dip"
+                app:sriv_right_bottom_corner_radius="25dip"
+                app:sriv_right_top_corner_radius="25dip" />
+
+            <TextView
+                android:id="@+id/inbox_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_7sdp"
+                android:text="INBOX"
+                android:textColor="@color/md_white_1000"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/inbox_imageview"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/online_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:text="Online "
+                android:textColor="@color/md_white_1000"
+                android:textSize="8sp"
+                app:layout_constraintStart_toEndOf="@id/inbox_imageview"
+                app:layout_constraintTop_toBottomOf="@id/inbox_textview" />
+
+            <TextView
+                android:id="@+id/online_count_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_1sdp"
+                android:drawableEnd="@drawable/ic_online"
+                android:drawablePadding="@dimen/_2sdp"
+                android:text="0"
+                android:textColor="@color/md_white_1000"
+                android:textSize="8sp"
+                app:layout_constraintStart_toEndOf="@id/online_count"
+                app:layout_constraintTop_toBottomOf="@id/inbox_textview" />
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
             android:id="@+id/info_imageview"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_info_white_24dp" />
-
-
-
-        <com.joooonho.SelectableRoundedImageView
-            android:id="@+id/inbox_imageview"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            app:sriv_left_top_corner_radius="25dip"
-            app:sriv_right_top_corner_radius="25dip"
-            app:sriv_left_bottom_corner_radius="25dip"
-            app:sriv_right_bottom_corner_radius="25dip"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_havana" />
-
-        <TextView
-            android:id="@+id/inbox_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="INBOX"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/md_white_1000"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_7sdp"
-            app:layout_constraintStart_toEndOf="@id/inbox_imageview"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/online_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Online "
-            android:textSize="8sp"
-            android:textColor="@color/md_white_1000"
-            android:drawableEnd="@drawable/ic_online"
-            android:layout_marginStart="@dimen/_10sdp"
-            app:layout_constraintStart_toEndOf="@id/inbox_imageview"
-            app:layout_constraintTop_toBottomOf="@id/inbox_textview" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
