--- a/app/src/main/res/layout/fragment_home_video.xml
+++ b/app/src/main/res/layout/fragment_home_video.xml
@@ -87,6 +87,15 @@
                         android:tint="@color/colorBlack"
                         android:src="@drawable/audio_play_black" />
 
+                    <ImageView
+                        android:id="@+id/test_imageview"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_centerVertical="true"
+                        android:tint="@color/colorBlack"
+                        android:visibility="gone" />
+
+
 
                 </RelativeLayout>
 
