--- a/app/src/main/res/layout/messages_item_left.xml
+++ b/app/src/main/res/layout/messages_item_left.xml
@@ -72,6 +72,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:maxWidth="260dp"
+                android:autoLink="web"
+                android:textColorLink="@color/md_blue_900"
+                android:clickable="true"
                 android:paddingLeft="12dp"
                 android:paddingTop="8dp"
                 android:paddingRight="12dp"
