--- a/app/src/main/res/layout/layout_video_toolbar.xml
+++ b/app/src/main/res/layout/layout_video_toolbar.xml
@@ -59,7 +59,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="6dp"
                 android:tint="#5B5B5B"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -71,7 +71,7 @@
                 android:layout_marginEnd="14dp"
                 android:layout_marginTop="1dp"
                 android:text="Service"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:textColor="@color/colorPrimary"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
