--- a/app/src/main/res/layout/activity_video_profile.xml
+++ b/app/src/main/res/layout/activity_video_profile.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/username_field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_16sdp"
