--- a/app/src/main/res/layout/fragment_home_video.xml
+++ b/app/src/main/res/layout/fragment_home_video.xml
@@ -153,7 +153,33 @@
             app:layout_constraintTop_toBottomOf="@+id/chat_header"
             app:layout_constraintVertical_bias="0.0" />
 
+        <LinearLayout
+            android:id="@+id/chat_web_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/chat_channels_recyclerview">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/chat_web_header"
+                android:text="Chats"
+                android:textStyle="bold"
+                android:textSize="@dimen/_14sdp"
+                android:textColor="@color/md_white_1000"
+                android:layout_marginStart="@dimen/activity_horizontal_margin" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chat_web_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:scrollbars="none" />
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleview_channels_programs"
@@ -166,7 +192,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chat_channels_recyclerview"
+            app:layout_constraintTop_toBottomOf="@+id/chat_web_layout"
             app:layout_constraintVertical_bias="0.0" />
 
         <com.wang.avi.AVLoadingIndicatorView
