--- a/app/src/main/res/layout/game_items_list.xml
+++ b/app/src/main/res/layout/game_items_list.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_click"
     android:layout_marginStart="@dimen/_2sdp"
-    android:layout_marginEnd="@dimen/_2sdp">
+    android:layout_marginEnd="@dimen/_2sdp"
+    android:layout_marginBottom="@dimen/_2sdp">
 
     <com.joooonho.SelectableRoundedImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
